Fixing center alignment

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
   list-style-type: none;
   padding: 0;
   margin: 0 auto;
-  width: 55em;
+  width: 50em;
 }
 #ourvalues ul li{
   font-weight: normal;
